FixBug ScrollBar

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 }
 
 body {
+  overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
